fix message alignment

--- a/src/components/message/Message.css
+++ b/src/components/message/Message.css
@@ -1,13 +1,13 @@
-.message-wrapper {
+.message-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.message-wrapper-them {
     text-align: left;
 }
 
-.message-wrapper-self {
-    float: right;
-    clear: both;
-}
-
-.message-text {
+.message-text-them {
     padding: 1em;
     margin-top: 2em;
     margin-bottom: 0.6em;
@@ -18,17 +18,21 @@
     color: var(--app-dark-font-color);
 }
 
+.message-name-them {
+    color: var(--app-light-font-color);
+    font-size: 0.7em;
+}
+
+.message-wrapper-self {
+    align-self: flex-end;
+}
+
 .message-text-self {
     padding: 1em;
     margin-top: 2em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
     background-color: var(--app-theme-color);
     border-radius: 15px;
     width: fit-content;
     font-size: 0.9em;
-}
-
-.message-name {
-    color: var(--app-light-font-color);
-    font-size: 0.7em;
 }
